# api/src/schemas.ts
@@ -54,10 +54,15 @@ export const ComponentQuery = z
   .object({
     env: qEnv,
     type: qStr,
+    types: qStr,
     sub_type: qStr,
+    sub_types: qStr,
+    weapon_damage_type: qStr,
+    cm_type: qStr,
     size: qStr,
     grade: qStr,
     component_class: qStr,
+    is_bespoke: qStr,
     min_size: qStr,
     max_size: qStr,
     manufacturer: qStr,
